--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -9,8 +9,8 @@
     <de.hdodenhof.circleimageview.CircleImageView
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/profile_image"
-        android:layout_width="76dp"
-    android:layout_height="76dp"
+        android:layout_width="100dp"
+    android:layout_height="100dp"
     android:src="@drawable/profile"
     app:border_color="#FF000000"
         android:layout_alignWithParentIfMissing="false"
@@ -31,7 +31,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="27dp"
-        android:layout_marginStart="27dp" />
+        android:layout_marginStart="27dp"
+        android:fontFamily="Roboto Medium" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,6 +45,7 @@
         android:textColor="#fff"
         android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/username"
-        android:layout_alignStart="@+id/username" />
+        android:layout_alignStart="@+id/username"
+        android:fontFamily="Roboto Regular" />
 
 </RelativeLayout>
