--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -49,15 +49,30 @@
             android:icon="@drawable/ic_account_balance_black_24dp"
             android:title="@string/balance_string" />
         <item
-            android:id="@+id/help"
+            android:id="@+id/buy"
             android:checked="false"
-            android:icon="@drawable/ic_help_black_24dp"
-            android:title="@string/help_string" />
+            android:icon="@drawable/ic_swap_horiz_black_24dp"
+            android:title="@string/buy_string" />
+        <item
+            android:id="@+id/account"
+            android:checked="false"
+            android:icon="@drawable/ic_account_circle_black_24dp"
+            android:title="@string/account_string" />
+        <item
+            android:id="@+id/stats"
+            android:checked="false"
+            android:icon="@drawable/ic_list_black_24dp"
+            android:title="@string/stats_string" />
         <item
             android:id="@+id/settings"
             android:checked="false"
             android:icon="@drawable/ic_settings_black_24dp"
             android:title="@string/settings_string" />
+        <item
+            android:id="@+id/help"
+            android:checked="false"
+            android:icon="@drawable/ic_help_black_24dp"
+            android:title="@string/help_string" />
         <item
             android:id="@+id/developer"
             android:checked="false"
